--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "compression": "^1.4.4",
     "configstore": "^3.0.0",
     "console-ui": "^1.0.2",
-    "core-object": "^3.0.0",
+    "core-object": "^3.1.3",
+    "dag-map": "^2.0.2",
     "diff": "^3.2.0",
     "ember-cli-broccoli-sane-watcher": "^2.0.4",
     "ember-cli-get-component-path-option": "^1.0.0",
@@ -70,7 +71,7 @@
     "ember-cli-normalize-entity-name": "^1.0.0",
     "ember-cli-preprocess-registry": "^3.1.0",
     "ember-cli-string-utils": "^1.0.0",
-    "ember-try": "^0.2.14",
+    "ember-try": "^0.2.15",
     "ensure-posix-path": "^1.0.2",
     "escape-string-regexp": "^1.0.3",
     "execa": "^0.6.0",
@@ -141,12 +142,12 @@
     "multiline": "^1.0.2",
     "nock": "^9.0.6",
     "supertest": "^3.0.0",
-    "testdouble": "^2.0.1",
+    "testdouble": "^2.1.2",
     "yuidoc-ember-cli-theme": "^1.0.0",
     "yuidocjs": "0.10.2"
   },
   "engines": {
-    "node": "^4.5 || 6.* || 7.*"
+    "node": "^4.5 || 6.* || >= 7.*"
   },
   "trackingCode": "UA-49225444-1",
   "greenkeeper": {
